--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,10 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^1.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "morgan": "~1.9.1",
